--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -6,5 +6,4 @@ body {
     align-items: center;
     user-select: none;
     overflow: hidden;
-    cursor: pointer;
 }
